# newMCF

./: .gitignore  003_left_parotid.stl  CMakeLists.txt  README.md  generateEllipsoidSREP.m  main.cpp  main.cxx  mandiblemesh.stl  mandiblemesh.vtk  writeSREP.m
